# python-logging-commons

./: .gitignore  .pylintrc  Pipfile  pyproject.toml  setup.py
.github/workflows/: main.yaml
logging_tools/: formatter.py
