[project]
name = "logging-commons"
version = "0.1.7"
description = "Python Logging Tools"
authors = [
    {name = "Patricio Ascencio", email = "paascencio@gmail.com"},
]
requires-python = ">=3.12"
long_description_content_type = "text/markdown"
[project.license]
text = "Apache-2.0"
[project.urls]
Homepage = "https://github.com/KaribuLab/python-logging-commons"
Issues = "https://github.com/KaribuLab/python-logging-commons/issues"
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"